# jyutyu-agent

./: .env.sample  .gitignore  README.md  main.py  package-lock.json  pyproject.toml
data/: extracted.json
kintone-mcp-server/: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  llms-install.md  package-lock.json  package.json
kintone-mcp-server/clinerules-bank/: 01-coding-standards.md  kintone-graph-implementation-plan.md
kintone-mcp-server/docs/: implementation-status.md  mcp-server-architecture.md  tool-annotations.md
kintone-mcp-server/docs/mcp-specification/: 2024-11-05.txt  2025-03-26.txt
kintone-mcp-server/src/: constants.js  index.js
kintone-mcp-server/src/models/: KintoneCredentials.js  KintoneRecord.js
kintone-mcp-server/src/repositories/: KintoneAppRepository.js  KintoneFileRepository.js  KintoneFormRepository.js  KintonePreviewRepository.js  KintoneRecordRepository.js  KintoneRepository.js  KintoneSpaceRepository.js  KintoneUserRepository.js
kintone-mcp-server/src/repositories/base/: BaseKintoneRepository.js
kintone-mcp-server/src/repositories/validators/: FieldValidator.js  LayoutValidator.js  OptionValidator.js
kintone-mcp-server/src/server/: MCPServer.js
kintone-mcp-server/src/server/handlers/: ErrorHandlers.js  ToolRequestHandler.js  ToolRouter.js
kintone-mcp-server/src/server/tools/: AppTools.js  BaseToolHandler.js  (+8 more)
kintone-mcp-server/src/utils/: DataTransformers.js  FieldValidationUtils.js  LayoutUtils.js  LoggingUtils.js  ResponseBuilder.js  ValidationUtils.js  index.js
src/: agent1.py  app.py  utils.py
(+28 files in other folders)
